parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> portugol
Rule 1     portugol -> func_list ; inicio code
Rule 2     portugol -> inicio declarar_list code
Rule 3     declarar_list -> declarar
Rule 4     declarar_list -> declarar_list ; declarar
Rule 5     declarar -> vartype : var_list
Rule 6     func_list -> func
Rule 7     func_list -> func_list ; func
Rule 8     func -> funcao var ( args ) com_list ; fimfuncao
Rule 9     code -> s
Rule 10    code -> code ; s
Rule 11    s -> comando
Rule 12    s -> fim
Rule 13    ciclo -> para var de e ate e faca com_list ; fimpara
Rule 14    ciclo -> enquanto n faca com_list ; fimenquanto
Rule 15    comando -> e
Rule 16    comando -> ciclo
Rule 17    comando -> var assign e
Rule 18    comando -> escreva ( e_list )
Rule 19    comando -> leia ( var_list )
Rule 20    comando -> se e entao com_list ; senao com_list ; fimse
Rule 21    comando -> se e entao com_list ; fimse
Rule 22    com_list -> comando
Rule 23    com_list -> com_list ; comando
Rule 24    e_list -> e
Rule 25    e_list -> e_list , e
Rule 26    e -> var
Rule 27    e -> ( e )
Rule 28    e -> b
Rule 29    e -> n
Rule 30    e -> string
Rule 31    e -> var ( e_list )
Rule 32    e -> var ( )
Rule 33    n -> nr
Rule 34    n -> - e
Rule 35    n -> ( n )
Rule 36    n -> e + e
Rule 37    n -> e - e
Rule 38    n -> e * e
Rule 39    n -> e / e
Rule 40    n -> e < e
Rule 41    n -> e leq e
Rule 42    n -> e > e
Rule 43    n -> e geq e
Rule 44    n -> e = e
Rule 45    n -> e dif e
Rule 46    b -> f
Rule 47    b -> e or e
Rule 48    b -> e and e
Rule 49    b -> e xor e
Rule 50    f -> true
Rule 51    f -> false
Rule 52    f -> not f
Rule 53    var_list -> var
Rule 54    var_list -> var_list , var
Rule 55    args -> <empty>
Rule 56    args -> var_list

Terminals, with rules where they appear

(                    : 8 18 19 27 31 32 35
)                    : 8 18 19 27 31 32 35
*                    : 38
+                    : 36
,                    : 25 54
-                    : 34 37
/                    : 39
:                    : 5
;                    : 1 4 7 8 10 13 14 20 20 21 23
<                    : 40
=                    : 44
>                    : 42
and                  : 48
assign               : 17
ate                  : 13
de                   : 13
dif                  : 45
enquanto             : 14
entao                : 20 21
error                : 
escreva              : 18
faca                 : 13 14
false                : 51
fim                  : 12
fimenquanto          : 14
fimfuncao            : 8
fimpara              : 13
fimse                : 20 21
funcao               : 8
geq                  : 43
inicio               : 1 2
leia                 : 19
leq                  : 41
not                  : 52
nr                   : 33
or                   : 47
para                 : 13
se                   : 20 21
senao                : 20
string               : 30
true                 : 50
var                  : 8 13 17 26 31 32 53 54
vartype              : 5
xor                  : 49

Nonterminals, with rules where they appear

args                 : 8
b                    : 28
ciclo                : 16
code                 : 1 2 10
com_list             : 8 13 14 20 20 21 23
comando              : 11 22 23
declarar             : 3 4
declarar_list        : 2 4
e                    : 13 13 15 17 20 21 24 25 27 34 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 47 47 48 48 49 49
e_list               : 18 25 31
f                    : 46 52
func                 : 6 7
func_list            : 1 7
n                    : 14 29 35
portugol             : 0
s                    : 9 10
var_list             : 5 19 54 56

Parsing method: LALR

state 0

    (0) S' -> . portugol
    (1) portugol -> . func_list ; inicio code
    (2) portugol -> . inicio declarar_list code
    (6) func_list -> . func
    (7) func_list -> . func_list ; func
    (8) func -> . funcao var ( args ) com_list ; fimfuncao

    inicio          shift and go to state 3
    funcao          shift and go to state 5

    portugol                       shift and go to state 1
    func_list                      shift and go to state 2
    func                           shift and go to state 4

state 1

    (0) S' -> portugol .



state 2

    (1) portugol -> func_list . ; inicio code
    (7) func_list -> func_list . ; func

    ;               shift and go to state 6


state 3

    (2) portugol -> inicio . declarar_list code
    (3) declarar_list -> . declarar
    (4) declarar_list -> . declarar_list ; declarar
    (5) declarar -> . vartype : var_list

    vartype         shift and go to state 9

    declarar_list                  shift and go to state 7
    declarar                       shift and go to state 8

state 4

    (6) func_list -> func .

    ;               reduce using rule 6 (func_list -> func .)


state 5

    (8) func -> funcao . var ( args ) com_list ; fimfuncao

    var             shift and go to state 10


state 6

    (1) portugol -> func_list ; . inicio code
    (7) func_list -> func_list ; . func
    (8) func -> . funcao var ( args ) com_list ; fimfuncao

    inicio          shift and go to state 11
    funcao          shift and go to state 5

    func                           shift and go to state 12

state 7

    (2) portugol -> inicio declarar_list . code
    (4) declarar_list -> declarar_list . ; declarar
    (9) code -> . s
    (10) code -> . code ; s
    (11) s -> . comando
    (12) s -> . fim
    (15) comando -> . e
    (16) comando -> . ciclo
    (17) comando -> . var assign e
    (18) comando -> . escreva ( e_list )
    (19) comando -> . leia ( var_list )
    (20) comando -> . se e entao com_list ; senao com_list ; fimse
    (21) comando -> . se e entao com_list ; fimse
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (13) ciclo -> . para var de e ate e faca com_list ; fimpara
    (14) ciclo -> . enquanto n faca com_list ; fimenquanto
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    ;               shift and go to state 14
    fim             shift and go to state 17
    var             shift and go to state 20
    escreva         shift and go to state 21
    leia            shift and go to state 23
    se              shift and go to state 24
    (               shift and go to state 22
    string          shift and go to state 27
    para            shift and go to state 28
    enquanto        shift and go to state 29
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    code                           shift and go to state 13
    s                              shift and go to state 15
    comando                        shift and go to state 16
    e                              shift and go to state 18
    ciclo                          shift and go to state 19
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 8

    (3) declarar_list -> declarar .

    ;               reduce using rule 3 (declarar_list -> declarar .)
    fim             reduce using rule 3 (declarar_list -> declarar .)
    var             reduce using rule 3 (declarar_list -> declarar .)
    escreva         reduce using rule 3 (declarar_list -> declarar .)
    leia            reduce using rule 3 (declarar_list -> declarar .)
    se              reduce using rule 3 (declarar_list -> declarar .)
    (               reduce using rule 3 (declarar_list -> declarar .)
    string          reduce using rule 3 (declarar_list -> declarar .)
    para            reduce using rule 3 (declarar_list -> declarar .)
    enquanto        reduce using rule 3 (declarar_list -> declarar .)
    nr              reduce using rule 3 (declarar_list -> declarar .)
    -               reduce using rule 3 (declarar_list -> declarar .)
    true            reduce using rule 3 (declarar_list -> declarar .)
    false           reduce using rule 3 (declarar_list -> declarar .)
    not             reduce using rule 3 (declarar_list -> declarar .)


state 9

    (5) declarar -> vartype . : var_list

    :               shift and go to state 36


state 10

    (8) func -> funcao var . ( args ) com_list ; fimfuncao

    (               shift and go to state 37


state 11

    (1) portugol -> func_list ; inicio . code
    (9) code -> . s
    (10) code -> . code ; s
    (11) s -> . comando
    (12) s -> . fim
    (15) comando -> . e
    (16) comando -> . ciclo
    (17) comando -> . var assign e
    (18) comando -> . escreva ( e_list )
    (19) comando -> . leia ( var_list )
    (20) comando -> . se e entao com_list ; senao com_list ; fimse
    (21) comando -> . se e entao com_list ; fimse
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (13) ciclo -> . para var de e ate e faca com_list ; fimpara
    (14) ciclo -> . enquanto n faca com_list ; fimenquanto
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    fim             shift and go to state 17
    var             shift and go to state 20
    escreva         shift and go to state 21
    leia            shift and go to state 23
    se              shift and go to state 24
    (               shift and go to state 22
    string          shift and go to state 27
    para            shift and go to state 28
    enquanto        shift and go to state 29
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    code                           shift and go to state 38
    s                              shift and go to state 15
    comando                        shift and go to state 16
    e                              shift and go to state 18
    ciclo                          shift and go to state 19
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 12

    (7) func_list -> func_list ; func .

    ;               reduce using rule 7 (func_list -> func_list ; func .)


state 13

    (2) portugol -> inicio declarar_list code .
    (10) code -> code . ; s

    $end            reduce using rule 2 (portugol -> inicio declarar_list code .)
    ;               shift and go to state 39


state 14

    (4) declarar_list -> declarar_list ; . declarar
    (5) declarar -> . vartype : var_list

    vartype         shift and go to state 9

    declarar                       shift and go to state 40

state 15

    (9) code -> s .

    ;               reduce using rule 9 (code -> s .)
    $end            reduce using rule 9 (code -> s .)


state 16

    (11) s -> comando .

    ;               reduce using rule 11 (s -> comando .)
    $end            reduce using rule 11 (s -> comando .)


state 17

    (12) s -> fim .

    ;               reduce using rule 12 (s -> fim .)
    $end            reduce using rule 12 (s -> fim .)


state 18

    (15) comando -> e .
    (47) b -> e . or e
    (48) b -> e . and e
    (49) b -> e . xor e
    (36) n -> e . + e
    (37) n -> e . - e
    (38) n -> e . * e
    (39) n -> e . / e
    (40) n -> e . < e
    (41) n -> e . leq e
    (42) n -> e . > e
    (43) n -> e . geq e
    (44) n -> e . = e
    (45) n -> e . dif e

    ;               reduce using rule 15 (comando -> e .)
    $end            reduce using rule 15 (comando -> e .)
    or              shift and go to state 41
    and             shift and go to state 42
    xor             shift and go to state 43
    +               shift and go to state 44
    -               shift and go to state 45
    *               shift and go to state 46
    /               shift and go to state 47
    <               shift and go to state 48
    leq             shift and go to state 49
    >               shift and go to state 50
    geq             shift and go to state 51
    =               shift and go to state 52
    dif             shift and go to state 53


state 19

    (16) comando -> ciclo .

    ;               reduce using rule 16 (comando -> ciclo .)
    $end            reduce using rule 16 (comando -> ciclo .)


state 20

    (17) comando -> var . assign e
    (26) e -> var .
    (31) e -> var . ( e_list )
    (32) e -> var . ( )

    assign          shift and go to state 54
    or              reduce using rule 26 (e -> var .)
    and             reduce using rule 26 (e -> var .)
    xor             reduce using rule 26 (e -> var .)
    +               reduce using rule 26 (e -> var .)
    -               reduce using rule 26 (e -> var .)
    *               reduce using rule 26 (e -> var .)
    /               reduce using rule 26 (e -> var .)
    <               reduce using rule 26 (e -> var .)
    leq             reduce using rule 26 (e -> var .)
    >               reduce using rule 26 (e -> var .)
    geq             reduce using rule 26 (e -> var .)
    =               reduce using rule 26 (e -> var .)
    dif             reduce using rule 26 (e -> var .)
    ;               reduce using rule 26 (e -> var .)
    $end            reduce using rule 26 (e -> var .)
    (               shift and go to state 55


state 21

    (18) comando -> escreva . ( e_list )

    (               shift and go to state 56


state 22

    (27) e -> ( . e )
    (35) n -> ( . n )
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    var             shift and go to state 59
    (               shift and go to state 22
    string          shift and go to state 27
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    e                              shift and go to state 57
    n                              shift and go to state 58
    b                              shift and go to state 25
    f                              shift and go to state 30

state 23

    (19) comando -> leia . ( var_list )

    (               shift and go to state 60


state 24

    (20) comando -> se . e entao com_list ; senao com_list ; fimse
    (21) comando -> se . e entao com_list ; fimse
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    var             shift and go to state 59
    (               shift and go to state 22
    string          shift and go to state 27
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    e                              shift and go to state 61
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 25

    (28) e -> b .

    or              reduce using rule 28 (e -> b .)
    and             reduce using rule 28 (e -> b .)
    xor             reduce using rule 28 (e -> b .)
    +               reduce using rule 28 (e -> b .)
    -               reduce using rule 28 (e -> b .)
    *               reduce using rule 28 (e -> b .)
    /               reduce using rule 28 (e -> b .)
    <               reduce using rule 28 (e -> b .)
    leq             reduce using rule 28 (e -> b .)
    >               reduce using rule 28 (e -> b .)
    geq             reduce using rule 28 (e -> b .)
    =               reduce using rule 28 (e -> b .)
    dif             reduce using rule 28 (e -> b .)
    ;               reduce using rule 28 (e -> b .)
    $end            reduce using rule 28 (e -> b .)
    )               reduce using rule 28 (e -> b .)
    entao           reduce using rule 28 (e -> b .)
    faca            reduce using rule 28 (e -> b .)
    ,               reduce using rule 28 (e -> b .)
    ate             reduce using rule 28 (e -> b .)


state 26

    (29) e -> n .

    or              reduce using rule 29 (e -> n .)
    and             reduce using rule 29 (e -> n .)
    xor             reduce using rule 29 (e -> n .)
    +               reduce using rule 29 (e -> n .)
    -               reduce using rule 29 (e -> n .)
    *               reduce using rule 29 (e -> n .)
    /               reduce using rule 29 (e -> n .)
    <               reduce using rule 29 (e -> n .)
    leq             reduce using rule 29 (e -> n .)
    >               reduce using rule 29 (e -> n .)
    geq             reduce using rule 29 (e -> n .)
    =               reduce using rule 29 (e -> n .)
    dif             reduce using rule 29 (e -> n .)
    ;               reduce using rule 29 (e -> n .)
    $end            reduce using rule 29 (e -> n .)
    entao           reduce using rule 29 (e -> n .)
    )               reduce using rule 29 (e -> n .)
    faca            reduce using rule 29 (e -> n .)
    ,               reduce using rule 29 (e -> n .)
    ate             reduce using rule 29 (e -> n .)


state 27

    (30) e -> string .

    or              reduce using rule 30 (e -> string .)
    and             reduce using rule 30 (e -> string .)
    xor             reduce using rule 30 (e -> string .)
    +               reduce using rule 30 (e -> string .)
    -               reduce using rule 30 (e -> string .)
    *               reduce using rule 30 (e -> string .)
    /               reduce using rule 30 (e -> string .)
    <               reduce using rule 30 (e -> string .)
    leq             reduce using rule 30 (e -> string .)
    >               reduce using rule 30 (e -> string .)
    geq             reduce using rule 30 (e -> string .)
    =               reduce using rule 30 (e -> string .)
    dif             reduce using rule 30 (e -> string .)
    ;               reduce using rule 30 (e -> string .)
    $end            reduce using rule 30 (e -> string .)
    )               reduce using rule 30 (e -> string .)
    entao           reduce using rule 30 (e -> string .)
    faca            reduce using rule 30 (e -> string .)
    ,               reduce using rule 30 (e -> string .)
    ate             reduce using rule 30 (e -> string .)


state 28

    (13) ciclo -> para . var de e ate e faca com_list ; fimpara

    var             shift and go to state 62


state 29

    (14) ciclo -> enquanto . n faca com_list ; fimenquanto
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    nr              shift and go to state 31
    -               shift and go to state 32
    (               shift and go to state 65
    var             shift and go to state 59
    string          shift and go to state 27
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    n                              shift and go to state 63
    e                              shift and go to state 64
    b                              shift and go to state 25
    f                              shift and go to state 30

state 30

    (46) b -> f .

    or              reduce using rule 46 (b -> f .)
    and             reduce using rule 46 (b -> f .)
    xor             reduce using rule 46 (b -> f .)
    +               reduce using rule 46 (b -> f .)
    -               reduce using rule 46 (b -> f .)
    *               reduce using rule 46 (b -> f .)
    /               reduce using rule 46 (b -> f .)
    <               reduce using rule 46 (b -> f .)
    leq             reduce using rule 46 (b -> f .)
    >               reduce using rule 46 (b -> f .)
    geq             reduce using rule 46 (b -> f .)
    =               reduce using rule 46 (b -> f .)
    dif             reduce using rule 46 (b -> f .)
    ;               reduce using rule 46 (b -> f .)
    $end            reduce using rule 46 (b -> f .)
    )               reduce using rule 46 (b -> f .)
    entao           reduce using rule 46 (b -> f .)
    faca            reduce using rule 46 (b -> f .)
    ,               reduce using rule 46 (b -> f .)
    ate             reduce using rule 46 (b -> f .)


state 31

    (33) n -> nr .

    or              reduce using rule 33 (n -> nr .)
    and             reduce using rule 33 (n -> nr .)
    xor             reduce using rule 33 (n -> nr .)
    +               reduce using rule 33 (n -> nr .)
    -               reduce using rule 33 (n -> nr .)
    *               reduce using rule 33 (n -> nr .)
    /               reduce using rule 33 (n -> nr .)
    <               reduce using rule 33 (n -> nr .)
    leq             reduce using rule 33 (n -> nr .)
    >               reduce using rule 33 (n -> nr .)
    geq             reduce using rule 33 (n -> nr .)
    =               reduce using rule 33 (n -> nr .)
    dif             reduce using rule 33 (n -> nr .)
    ;               reduce using rule 33 (n -> nr .)
    $end            reduce using rule 33 (n -> nr .)
    )               reduce using rule 33 (n -> nr .)
    entao           reduce using rule 33 (n -> nr .)
    faca            reduce using rule 33 (n -> nr .)
    ,               reduce using rule 33 (n -> nr .)
    ate             reduce using rule 33 (n -> nr .)


state 32

    (34) n -> - . e
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    var             shift and go to state 59
    (               shift and go to state 22
    string          shift and go to state 27
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    e                              shift and go to state 66
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 33

    (50) f -> true .

    or              reduce using rule 50 (f -> true .)
    and             reduce using rule 50 (f -> true .)
    xor             reduce using rule 50 (f -> true .)
    +               reduce using rule 50 (f -> true .)
    -               reduce using rule 50 (f -> true .)
    *               reduce using rule 50 (f -> true .)
    /               reduce using rule 50 (f -> true .)
    <               reduce using rule 50 (f -> true .)
    leq             reduce using rule 50 (f -> true .)
    >               reduce using rule 50 (f -> true .)
    geq             reduce using rule 50 (f -> true .)
    =               reduce using rule 50 (f -> true .)
    dif             reduce using rule 50 (f -> true .)
    ;               reduce using rule 50 (f -> true .)
    $end            reduce using rule 50 (f -> true .)
    )               reduce using rule 50 (f -> true .)
    entao           reduce using rule 50 (f -> true .)
    faca            reduce using rule 50 (f -> true .)
    ,               reduce using rule 50 (f -> true .)
    ate             reduce using rule 50 (f -> true .)


state 34

    (51) f -> false .

    or              reduce using rule 51 (f -> false .)
    and             reduce using rule 51 (f -> false .)
    xor             reduce using rule 51 (f -> false .)
    +               reduce using rule 51 (f -> false .)
    -               reduce using rule 51 (f -> false .)
    *               reduce using rule 51 (f -> false .)
    /               reduce using rule 51 (f -> false .)
    <               reduce using rule 51 (f -> false .)
    leq             reduce using rule 51 (f -> false .)
    >               reduce using rule 51 (f -> false .)
    geq             reduce using rule 51 (f -> false .)
    =               reduce using rule 51 (f -> false .)
    dif             reduce using rule 51 (f -> false .)
    ;               reduce using rule 51 (f -> false .)
    $end            reduce using rule 51 (f -> false .)
    )               reduce using rule 51 (f -> false .)
    entao           reduce using rule 51 (f -> false .)
    faca            reduce using rule 51 (f -> false .)
    ,               reduce using rule 51 (f -> false .)
    ate             reduce using rule 51 (f -> false .)


state 35

    (52) f -> not . f
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    f                              shift and go to state 67

state 36

    (5) declarar -> vartype : . var_list
    (53) var_list -> . var
    (54) var_list -> . var_list , var

    var             shift and go to state 69

    var_list                       shift and go to state 68

state 37

    (8) func -> funcao var ( . args ) com_list ; fimfuncao
    (55) args -> .
    (56) args -> . var_list
    (53) var_list -> . var
    (54) var_list -> . var_list , var

    )               reduce using rule 55 (args -> .)
    var             shift and go to state 69

    args                           shift and go to state 70
    var_list                       shift and go to state 71

state 38

    (1) portugol -> func_list ; inicio code .
    (10) code -> code . ; s

    $end            reduce using rule 1 (portugol -> func_list ; inicio code .)
    ;               shift and go to state 39


state 39

    (10) code -> code ; . s
    (11) s -> . comando
    (12) s -> . fim
    (15) comando -> . e
    (16) comando -> . ciclo
    (17) comando -> . var assign e
    (18) comando -> . escreva ( e_list )
    (19) comando -> . leia ( var_list )
    (20) comando -> . se e entao com_list ; senao com_list ; fimse
    (21) comando -> . se e entao com_list ; fimse
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (13) ciclo -> . para var de e ate e faca com_list ; fimpara
    (14) ciclo -> . enquanto n faca com_list ; fimenquanto
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    fim             shift and go to state 17
    var             shift and go to state 20
    escreva         shift and go to state 21
    leia            shift and go to state 23
    se              shift and go to state 24
    (               shift and go to state 22
    string          shift and go to state 27
    para            shift and go to state 28
    enquanto        shift and go to state 29
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    s                              shift and go to state 72
    comando                        shift and go to state 16
    e                              shift and go to state 18
    ciclo                          shift and go to state 19
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 40

    (4) declarar_list -> declarar_list ; declarar .

    ;               reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    fim             reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    var             reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    escreva         reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    leia            reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    se              reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    (               reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    string          reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    para            reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    enquanto        reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    nr              reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    -               reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    true            reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    false           reduce using rule 4 (declarar_list -> declarar_list ; declarar .)
    not             reduce using rule 4 (declarar_list -> declarar_list ; declarar .)


state 41

    (47) b -> e or . e
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    var             shift and go to state 59
    (               shift and go to state 22
    string          shift and go to state 27
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    e                              shift and go to state 73
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 42

    (48) b -> e and . e
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    var             shift and go to state 59
    (               shift and go to state 22
    string          shift and go to state 27
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    e                              shift and go to state 74
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 43

    (49) b -> e xor . e
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    var             shift and go to state 59
    (               shift and go to state 22
    string          shift and go to state 27
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    e                              shift and go to state 75
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 44

    (36) n -> e + . e
    (26) e -> . var
    (27) e -> . ( e )
    (28) e -> . b
    (29) e -> . n
    (30) e -> . string
    (31) e -> . var ( e_list )
    (32) e -> . var ( )
    (46) b -> . f
    (47) b -> . e or e
    (48) b -> . e and e
    (49) b -> . e xor e
    (33) n -> . nr
    (34) n -> . - e
    (35) n -> . ( n )
    (36) n -> . e + e
    (37) n -> . e - e
    (38) n -> . e * e
    (39) n -> . e / e
    (40) n -> . e < e
    (41) n -> . e leq e
    (42) n -> . e > e
    (43) n -> . e geq e
    (44) n -> . e = e
    (45) n -> . e dif e
    (50) f -> . true
    (51) f -> . false
    (52) f -> . not f

    var             shift and go to state 59
    (               shift and go to state 22
    string          shift and go to state 27
    nr              shift and go to state 31
    -               shift and go to state 32
    true            shift and go to state 33
    false           shift and go to state 34
    not             shift and go to state 35

    e                              shift and go to state 76
    b                              shift and go to state 25
    n                              shift and go to state 26
    f                              shift and go to state 30

state 45
